# melofin

./: .gitignore  Cargo.toml  README.md  env.example  rustypipe_cache.json
.mimocode/: .cron-lock
.mimocode/plans/: 1784020216038-stellar-wizard.md
doc/: DESIGN_PLAN.md  GUIDE.md  IMPROVEMENT_PLAN.md  login-plan.md
rustypipe_reports/: 2026-07-11_10-28-15_ERR.json
src/: auth.rs  detail_fetch.rs  home_feed.rs  innertube.rs  lib.rs  liked_songs.rs  main.rs  mpris.rs  mpv.rs  play_history.rs  player.rs  queue.rs  search.rs  thumbnail.rs  user.rs
src/ui/: detail_view.rs  explore_view.rs  home_view.rs  library_sidebar.rs  liked_songs_view.rs  login_dialog.rs  mod.rs  now_playing_panel.rs  now_playing_view.rs  player_bar.rs  queue_panel.rs  search_view.rs  settings_view.rs  style.css  thumbnail_widget.rs  top_bar.rs  window.rs
src/ui/styles/: detail.css  explore.css  home.css  liked_songs.css  now_playing.css  now_playing_view.css  player.css  queue.css  search.css  settings.css  sidebar.css  skeleton.css  tokens.css  top_bar.css
