[package]
name = "melofin"
version = "0.1.0"
edition = "2024"
description = "A native desktop YouTube Music client for Linux/Hyprland"
license = "GPL-3.0-or-later"
repository = "https://github.com/sejarparvez/melofin"
default-run = "melofin"

[[bin]]
name = "melofin"
path = "src/main.rs"

[[bin]]
name = "search-test"
path = "src/bin/search_test.rs"

[[bin]]
name = "ui-shell"
path = "src/bin/ui_shell.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Config
dotenvy = "0.15"

# Playback — mpv subprocess controlled over its JSON IPC socket
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System integration
mpris-server = "0.9"

# UI (Step 4 — standalone window for now, not yet wired to tokio/mpv/mpris)
gtk = { package = "gtk4", version = "0.11" }
adw = { package = "libadwaita", version = "0.9", features = ["v1_4"] }

# Optional but recommended
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-channel = "2"
